Create authentification system with recovery password and roles user

--- a/snowtricks/.env
+++ b/snowtricks/.env
@@ -21,7 +21,7 @@ APP_SECRET=8f1cccebb725d2e36b8780de9cc29abf
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
